--- a/web/www/index.html
+++ b/web/www/index.html
@@ -97,6 +97,7 @@
     <script src="./dist/js/key.min.js"></script>
     <script src="./dist/js/bonzi.js"></script>
     <script src="./dist/js/lib/mswindow.js"></script>
+    <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
     <script
       type="text/javascript"
       id="www-widgetapi-script"
@@ -328,7 +329,7 @@
           <hr>
           Make sure to check out the
           <a id="readme" href="./readme/" target="_blank">README</a> and <a id="readme" href="./rules/" target="_blank">RULES</a> before
-          use. You know, Some anonymous are FONTFAGS. So if you see them and you're a admin, Nuke them. If you see them and you're NOT a admin, Insult them and Mute them.
+          use. Guys, never ever trust diogo, He said that he changed, in reality, HE DIDN'T. And i even doxxed diogo (doggis). Diogo loves men, Diogo is a horny bitch. Diogo also changed his name AGAIN, into "Nemo" (Nemoggis), if Nemo joined, make sure to call him a doggis.
        </div>
         <div id="login_card" style="display: none">
           <input id="login_name" type="text" placeholder="Nickname" />
@@ -416,9 +417,10 @@
             <li>1.14.0.0 - The release.</li>
             <br>
             <li>1.14.0.1 - Added the No Fuck Off. Added the bonzigetbleach color. Added the typing sound. Theres now new shows on BonziTV. Added the BonziTV Theme. Added polls and announce (From BonziWORLD.org. It's also ported into BWAE.) Added a new mod tool called "Niggerify" (Not to be confused with the insult.) Added a KinitoPET Voice. Added the /wtf command. Added the broken voice. Replaced the king color due to it having a jew face. Removed the jew color.</li>
+            <li>1.14.0.2 - Theres now new shows on BonziTV. Added the /playaudio command, Added the /vidlii command. Added the new phrase of /wtf. There's now a new BG. The Ban is now functional. </li>
+            <li>1.14.0.3 - Added the Doggis color, Added the flash player command, Added the new mod tools, Bless, also added the blessed color. Fixed the announce and poll.</li>
             </ul>
             <br>
-            <li>1.14.0.2 - Theres now new shows on BonziTV. Added the /playaudio command, Added the /vidlii command. Added the new phrase of /wtf. There's now a new BG. The Ban is now functional. </li>
             <button onclick="$('#page_changelog').hide()">Close</button>
         </div>
       </div>
