--- a/web/www/readme/index.html
+++ b/web/www/readme/index.html
@@ -57,7 +57,12 @@
       <h6 id="leading-the-industry-in-gorilla-based-chat-clients-">
         Leading the industry in gorilla-based chat clients.
       </h6>
-      <b><big>B</big></b>onzi<big><b>W</b></big>ORLD <b><big>A</big></b>nony <b><big>E</big></b>dition <b><big>R</big></b>emastered
+      <b><big>B</big></b
+      >onzi<big><b>W</b></big
+      >ORLD <b><big>A</big></b
+      >nony <b><big>E</big></b
+      >dition <b><big>R</big></b
+      >emastered
       <h2 id="what-the-hell-is-this-">What the hell is this?</h2>
       <p>
         BonziWORLD is a node.js and socket.io based chat client featuring
@@ -134,13 +139,14 @@
             <li>yellow</li>
             <li>magenta</li>
             <li>penisofkonstantin</li>
-            <li>droyd</li>  
+            <li>droyd</li>
             <li>qmark</li>
             <li>clippy</li>
             <li>noob</li>
-            <li>peedy</li>      
-            <li>floyd</li>    
-            <li>rpc</li>              
+            <li>peedy</li>
+            <li>floyd</li>
+            <li>rpc</li>
+            <li>doggis</li>
             <li>
               If you don&#39;t type a color, you will be given one at random.
             </li>
@@ -148,7 +154,7 @@
         </li>
         <li><code>/joke</code> - Tell a horribly written joke.</li>
         <li><code>/fact</code> - Tell a horribly written &quot;fact&quot;.</li>
-        
+
         <li>
           <code>/backflip</code> - Do a backflip.
           <ul>
@@ -183,8 +189,8 @@
         <li><code>/video [vid id]</code> - Show a video.</li>
         <li><code>/audio</code> - Show a audio.</li>
         <li>
-          <code>/voice [voice]</code> - Change your BonziBUDDY's voice! The
-          ones available are:
+          <code>/voice [voice]</code> - Change your BonziBUDDY's voice! The ones
+          available are:
           <ul>
             <li>espeak</li>
             <li>default</li>
@@ -195,47 +201,47 @@
             <li>mike</li>
             <li>mary</li>
             <li>voiceforge:Kidaroo</li>
-						<li>voiceforge:Wiseguy</li>
-						<li>voiceforge:Jerkface</li>
-						<li>voiceforge:Damien</li>
-						<li>voiceforge:Kevin</li>
-						<li>voiceforge:Charlie</li>
-						<li>voiceforge:Kayla</li>
-						<li>voiceforge:Princess</li>
-						<li>voiceforge:RansomNote</li>
-						<li>voiceforge:Robot</li>
-						<li>voiceforge:TopHat</li>
-						<li>voiceforge:Evilgenius</li>
-						<li>voiceforge:Dog</li>
-						<li>voiceforge:David</li>
-						<li>voiceforge:French-fry</li>
-						<li>voiceforge:Designer</li>
-						<li>voiceforge:Obama</li>
-						<li>voiceforge:Conrad</li>
-						<li>voiceforge:Warren</li>
-						<li>voiceforge:Duchess</li>
-						<li>voiceforge:Linda</li>
-						<li>voiceforge:Millie</li>
-						<li>voiceforge:Diesel</li>
-						<li>voiceforge:Vixen</li>
-						<li>voiceforge:Vlad</li>
-						<li>voiceforge:William</li>
-						<li>voiceforge:Shygirl</li>
-						<li>voiceforge:JerseyGirl</li>
-						<li>voiceforge:Frank</li>
-						<li>voiceforge:Susan</li>
-						<li>voiceforge:Emily</li>
-						<li>voiceforge:Duncan</li>
-						<li>voiceforge:Gregory</li>
-						<li>voiceforge:Shouty</li>
-						<li>voiceforge:Dallas</li>
-						<li>voiceforge:Diane</li>
-						<li>voiceforge:Amy</li>
-						<li>voiceforge:Walter</li>
-						<li>voiceforge:Zach</li>
-						<li>voiceforge:Callie</li>
-						<li>voiceforge:Lawrence</li>
-						<li>voiceforge:Belle</li>
+            <li>voiceforge:Wiseguy</li>
+            <li>voiceforge:Jerkface</li>
+            <li>voiceforge:Damien</li>
+            <li>voiceforge:Kevin</li>
+            <li>voiceforge:Charlie</li>
+            <li>voiceforge:Kayla</li>
+            <li>voiceforge:Princess</li>
+            <li>voiceforge:RansomNote</li>
+            <li>voiceforge:Robot</li>
+            <li>voiceforge:TopHat</li>
+            <li>voiceforge:Evilgenius</li>
+            <li>voiceforge:Dog</li>
+            <li>voiceforge:David</li>
+            <li>voiceforge:French-fry</li>
+            <li>voiceforge:Designer</li>
+            <li>voiceforge:Obama</li>
+            <li>voiceforge:Conrad</li>
+            <li>voiceforge:Warren</li>
+            <li>voiceforge:Duchess</li>
+            <li>voiceforge:Linda</li>
+            <li>voiceforge:Millie</li>
+            <li>voiceforge:Diesel</li>
+            <li>voiceforge:Vixen</li>
+            <li>voiceforge:Vlad</li>
+            <li>voiceforge:William</li>
+            <li>voiceforge:Shygirl</li>
+            <li>voiceforge:JerseyGirl</li>
+            <li>voiceforge:Frank</li>
+            <li>voiceforge:Susan</li>
+            <li>voiceforge:Emily</li>
+            <li>voiceforge:Duncan</li>
+            <li>voiceforge:Gregory</li>
+            <li>voiceforge:Shouty</li>
+            <li>voiceforge:Dallas</li>
+            <li>voiceforge:Diane</li>
+            <li>voiceforge:Amy</li>
+            <li>voiceforge:Walter</li>
+            <li>voiceforge:Zach</li>
+            <li>voiceforge:Callie</li>
+            <li>voiceforge:Lawrence</li>
+            <li>voiceforge:Belle</li>
           </ul>
         </li>
         <li>
@@ -264,9 +270,7 @@
         <li><code>/unvaporwave</code> - ＡＥＳＴＨＥＴＩＣ ＩＳ ＫＩＬＬ</li>
       </ul>
       <h2 id="are-there-any-rules-">Are there any rules?</h2>
-      <p>
-        Yes. On top of that, there are a few limitations:
-      </p>
+      <p>Yes. On top of that, there are a few limitations:</p>
       <ul>
         <li>
           All strings are sanitized to get rid of any malicious HTML/JS/CSS.
@@ -327,7 +331,7 @@
       <p>
         You guys are awesome. (And so are you, whoever&#39;s reading this!)
         There are also probably some others I forgot. If I remember you,
-        I&#39;ll add you here. 
+        I&#39;ll add you here.
       </p>
     </div>
 
