i feed you some updates, bonziworld anony edition.

--- a/web/www/index.html
+++ b/web/www/index.html
@@ -29,19 +29,19 @@
     <meta property="og:site_name" content="BonziWORLD 2" />
     <meta
       property="og:keywords"
-      content="BonziWORLD 2, bonziworld-two, BonziWorld 2, BonziWORLD Two, bonziworld two, BonziWORLD, bonziworld, bwr, BWR, BonziWorld Revived, Bonziworld"
+      content="BW Anony Edition BWAE BWAER AnonyWORLD Community Edition BonziWORLD Anony Edition"
     />
     <meta data-react-helmet="true" charset="utf-8" />
     <meta data-react-helmet="true" property="og:title" content="BonziWORLD 2" />
     <meta
       data-react-helmet="true"
       property="og:description"
-      content="Welcome to BonziWORLD 2! Please don't break the rules in BonziWORLD 2 or else we will kick or ban you. Also, before you start being on BonziWORLD 2, there's a README to look at. This site is for users who must be 13 years old."
+      content="Welcome to BWAE! This is a fork of BonziWORLD II, Please read the readme and rules."
     />
     <meta
       data-react-helmet="true"
       name="description"
-      content="Welcome to BonziWORLD 2! Please don't break the rules in BonziWORLD 2 or else we will kick or ban you. Also, before you start being on BonziWORLD 2, there's a README to look at. This site is for users who must be 13 years old."
+      content="Welcome to BWAE! This is a fork of BonziWORLD II, Please read the readme and rules."
     />
     <script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>
     <script src="https://www.google.com/recaptcha/api.js"></script>
@@ -320,7 +320,7 @@
       <div id="page_login" class="page">
         <div id="login_apps" class="app_showcase"></div>
         <div id="login_headline">
-          The owner of BWAER hacked Doggis YET AGAIN. BonziWORLD also returned! And doggis is really BAWWWWWWWWWWWWWwWING about it. Doggis got scared of me cuz i hacked his DeviantTard account. LMAO. Doggis was also a GoFag.
+          Anonybehh says: "OfficerPoop247 Is a fucking retarded Go!Turd."
           </div>
         <div id="login_readme">
           <b><a href="./misc/">Miscellaneous Links</a></b><br>
@@ -418,7 +418,8 @@
             <br>
             <li>1.14.0.1 - Added the No Fuck Off. Added the bonzigetbleach color. Added the typing sound. Theres now new shows on BonziTV. Added the BonziTV Theme. Added polls and announce (From BonziWORLD.org. It's also ported into BWAE.) Added a new mod tool called "Niggerify" (Not to be confused with the insult.) Added a KinitoPET Voice. Added the /wtf command. Added the broken voice. Replaced the king color due to it having a jew face. Removed the jew color.</li>
             <li>1.14.0.2 - Theres now new shows on BonziTV. Added the /playaudio command, Added the /vidlii command. Added the new phrase of /wtf. There's now a new BG. The Ban is now functional. </li>
-            <li>1.14.0.3 - Added the Doggis color, Added the flash player command, Added the new mod tools, Bless, also added the blessed color. Fixed the announce and poll.</li>
+            <li>1.14.0.3 - Added the Doggis color, Added the flash player command via /video_flash, Added the new mod tools, Bless, also added the blessed color. Fixed the announce and poll.</li>
+            <li>1.14.0.4 - Added the noobgetbleach color. Added the /letsplay command. Reverted the godword into the old one. Added a "Launch Bot".</li>
             </ul>
             <br>
             <button onclick="$('#page_changelog').hide()">Close</button>
