--- a/web/www/rules/index.html
+++ b/web/www/rules/index.html
@@ -71,7 +71,8 @@
       <li>No spamfags allowed.</li>
       <li>Posting nudity can result you getting banned and kicked.</li>
       <li>No Siobhan Supporters (Like some BWCOers) allowed.</li>
-      <li>No godword beggers allowed.</li>
+      <li>No godword beggars allowed.</li>
+      <li>No sprunkifags allowed.</li>
       </ul>
       <h1>What happens when i break the rules?</h1>
       <span>You will get banned, kicked, nuked, dissolved, raped, and doggifyed.</span>
