--- a/web/www/index.html
+++ b/web/www/index.html
@@ -231,7 +231,7 @@
                <br><big>Voices List (Only works when ESpeak is disabled)</big>
                <br>
                <select name="voice" id="voice"></select>
-               <br> <a href="https://discord.gg/cJuJ9Cr">Psst.. We have a Discord Server (dead)</a>
+               <br> <a href="https://discord.gg/ueSEEgVj">Psst.. We have a Discord Server</a>
                <br><big><a href="https://www.cdc.gov/coronavirus/2019-ncov/index.html">Wash your hands!</a></big>
                <br><a href="javascript:print();">Print BWAER!</a>
               </br>
