OH NO- BOOOOOOOM

--- a/web/www/index.html
+++ b/web/www/index.html
@@ -329,7 +329,7 @@
           <hr>
           Make sure to check out the
           <a id="readme" href="./readme/" target="_blank">README</a> and <a id="readme" href="./rules/" target="_blank">RULES</a> before
-          use. Guys, never ever trust diogo, He said that he changed, in reality, HE DIDN'T. And i even doxxed diogo (doggis). Diogo loves men, Diogo is a horny bitch. Diogo also changed his name AGAIN, into "Nemo" (Nemoggis), if Nemo joined, make sure to call him a doggis.
+          use. <br><marquee>ALERT: If you see that faggot called "MIKU PORNN!" then insult him and ban him if you're a admin. AND PLEASE DON'T LEAK THE GODWORD. Also dianxar got butthurted.</marquee>
        </div>
         <div id="login_card" style="display: none">
           <input id="login_name" type="text" placeholder="Nickname" />
@@ -348,7 +348,7 @@
         </div>
         <div id="login_load">loading... <img id="loading_cursor" class="no_selection" src="./img/icons/cursors/hourglass3.gif" draggable="false"></div>
         <div id="login_social" class="no_selection">
-          <a href="" alt="Discord" title="Discord" target="_blank" class="icons" style="margin-right: 10px;"><i class="fab fa-discord fa-2x"></i></a>
+          <a href="https://discord.gg/2gwWM9Ny" alt="Discord" title="Discord" target="_blank" class="icons" style="margin-right: 10px;"><i class="fab fa-discord fa-2x"></i></a>
           <a href="" alt="Steam" title="Steam" target="_blank" class="icons" style="margin-right: 10px;"><i class="fab fa-steam fa-2x"></i></a>
           <a href="https://youtube.com/@ThatOneAnony" alt="Youtube" title="Youtube" target="_blank" class="icons" style="margin-right: 10px;"><i class="fab fa-youtube fa-2x" aria-hidden="true"></i></a>
           <a href="https://github.com/anonybehh" alt="Cosmic on Github" title="Cosmic on Github" target="_blank" class="icons" style="margin-right: 10px;"><i class="fab fa-github fa-2x" aria-hidden="true"></i></a>
