--- a/web/www/index.html
+++ b/web/www/index.html
@@ -329,7 +329,7 @@
           <hr>
           Make sure to check out the
           <a id="readme" href="./readme/" target="_blank">README</a> and <a id="readme" href="./rules/" target="_blank">RULES</a> before
-          use. <br><marquee>ALERT: If you see that faggot called "MIKU PORNN!" then insult him and ban him if you're a admin. AND PLEASE DON'T LEAK THE GODWORD. Also dianxar got butthurted.</marquee>
+          use. <br> If you're friends with nazar, then UNFRIEND HIM. He literally said the N word (Which is racist.) and Nazar larped at <b>EVERY. FUCKING. BW USER.</b> Also Nazar keeps fucking copying Ahmad's Discord Server. LIKE NAZAR WHAT THE FUCK?!
        </div>
         <div id="login_card" style="display: none">
           <input id="login_name" type="text" placeholder="Nickname" />
@@ -391,7 +391,7 @@
         <div id="error_cont" class="message_cont">
           <img src="./img/ban/logo.png"><br>
           <br>
-          <h1>Welcome to the nigga town.</h1><br>
+          <h1>REMOVED DUE TO IT'S RACIST WORD</h1><br>
                   <button onclick="$('#nigga_cont').hide()">Ok</button>
         </div>
       </div>
@@ -416,11 +416,12 @@
           <ul>
             <li>1.14.0.0 - The release.</li>
             <br>
-            <li>1.14.0.1 - Added the No Fuck Off. Added the bonzigetbleach color. Added the typing sound. Theres now new shows on BonziTV. Added the BonziTV Theme. Added polls and announce (From BonziWORLD.org. It's also ported into BWAE.) Added a new mod tool called "Niggerify" (Not to be confused with the insult.) Added a KinitoPET Voice. Added the /wtf command. Added the broken voice. Replaced the king color due to it having a jew face. Removed the jew color.</li>
+            <li>1.14.0.1 - Added the No Fuck Off. Added the bonzigetbleach color. Added the typing sound. Theres now new shows on BonziTV. Added the BonziTV Theme. Added polls and announce (From BonziWORLD.org. It's also ported into BWAE.) <del>Added a new mod tool called "(CENSORED)ify"</del>Added a KinitoPET Voice. Added the /wtf command. Added the broken voice. Replaced the king color due to it having a jew face. Removed the jew color.</li>
             <li>1.14.0.2 - Theres now new shows on BonziTV. Added the /playaudio command, Added the /vidlii command. Added the new phrase of /wtf. There's now a new BG. The Ban is now functional. </li>
             <li>1.14.0.3 - Added the Doggis color, Added the flash player command via /video_flash, Added the new mod tools, Bless, also added the blessed color. Fixed the announce and poll.</li>
             <li>1.14.0.4 - Added the noobgetbleach color. Added the /letsplay command. Reverted the godword into the old one. Added a "Launch Bot".</li>
-            </ul>
+            <li>1.14.0.5 - Replaced the N wordify into Moronify due to it's racist word. (Mailbox asked me to change it.) Updated the "Welcome".</li>
+          </ul>
             <br>
             <button onclick="$('#page_changelog').hide()">Close</button>
         </div>
