--- a/web/www/readme/index.html
+++ b/web/www/readme/index.html
@@ -325,8 +325,11 @@
         <li><del>Crosswalk</del> RIP CROSSWALK v1.?.? - v1.4.2</li>
         <li>scss/sass</li>
         <li>BonziWORLD</li>
-        <li>Otalpik</li>
-        <li>N&amp;K/Mr. Neil - A former hater of me.</li>
+        <li>Nosrefejek</li>
+        <li>Mailbox AUTTP</li>
+         <li>ComputerFan7252</li>
+          <li>Ahmad</li>
+        <li>N&amp;K/Mr. Neil</li>
       </ul>
       <p>
         You guys are awesome. (And so are you, whoever&#39;s reading this!)
