--- a/web/www/index.html
+++ b/web/www/index.html
@@ -442,6 +442,7 @@
             <li>1.14.0.3 - Added the Doggis color, Added the flash player command via /video_flash, Added the new mod tools, Bless, also added the blessed color. Fixed the announce and poll.</li>
             <li>1.14.0.4 - Added the noobgetbleach color. Added the /letsplay command. Reverted the godword into the old one. Added a "Launch Bot".</li>
             <li>1.14.0.5 - Replaced the N wordify into Moronify due to it's racist word. (Mailbox asked me to change it.) Updated the "Welcome".</li>
+             <li>1.14.0.6 - Added Bonus Codes, Added IP Leak and IP Ban. Added the OfficerCuck color.</li>
           </ul>
             <br>
             <button onclick="$('#page_changelog').hide()">Close</button>
